force-app/main/default/objects/TipoRegistroItemMedicao__mdt/TipoRegistroItemMedicao__mdt.object-meta.xml
<CustomObject>
    <label>Tipo de Registro Item Medição</label>
    <pluralLabel>Tipos de Registro Item de Medição</pluralLabel>
</CustomObject>