force-app/main/default/objects/TipoRegistroItemMedicao__mdt/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <label>Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>