force-app/main/default/objects/TipoRegistroItemMedicao__mdt/fields/IdTipo__c.field-meta.xml
<CustomField>
    <fullName>IdTipo__c</fullName>
    <label>Id do Tipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>