force-app/main/default/objects/TipoRegistroItemMedicao__mdt/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Campo utilizado para ordenar a lista de itens de medição</description>
    <inlineHelpText>Campo utilizado para ordenar a lista de itens de medição</inlineHelpText>
    <label>Position</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>